--- a/project2/sk.html
+++ b/project2/sk.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>this is sample
-        
-    </p>
+    <p>this is sample</p>
     
 </body>
 </html>
